# numbers

./: .editorconfig  .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
src/: main.py
src/processing/: config.py  evaluate.py  game.py  games.json  train.py
tests/: test_config.py  test_evaluate.py  test_game.py  test_train.py
