[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = ["ruff>=0.9.6"]
